--- a/vue20170620.html
+++ b/vue20170620.html
@@ -36,6 +36,21 @@ var app7 = new Vue({
     ]
   }
 })
+
+//Vue实例
+var vm = new vue({
+
+
+});
+
+var MyComponent = Vue.extend({
+  // 扩展选项
+});
+// 所有的 `MyComponent` 实例都将以预定义的扩展选项被创建
+var myComponentInstance = new MyComponent();
+
+
+
 </script>
 </body>
 </html>
